October 30 2009:  Release 1.6.4 R1017
=====================================
Enhanced OgreAny support
QuickGui 9.10
Fix to ogrenewt2 to expose body class
Updates to ReportVerion to work in non svn environment

October 15 2009:  Release 1.6.4 R1001
=====================================
Basically an Ogre 1.6.4 release with every module updated :)
See ReportVersion.out for the various versions...

April 2 2009: Release 1.6.1 R940
=================================

Python 2.6 has been tested as part of this release..

Fix: Bullet wrapper for Windows -- incompatibility between the way the base bullet library was built and the
     way Python-Ogre wrappers were done -- the base library had byte alignment enabled on a number of functions
     which is not supported (completely) with boost so lots of stack corruption
Fix: Minor fixes to Build scripts when using differnet versions of Python on a single machine   
Change: Theora video library name changed to OgreVideo - reflects the base code is now from the OgreVideo project
        and not from the ogreaddons/video module (which is inactive)
            
Update: Caelum, Hydrax, OgreForests, OgreBullet, ODE and OgreODE all updated to latest versions    
Update: Using latest Boost 1.38

Feburary 26 2009 : Release 1.6.1r906
====================================
<<SnapShot Release>>
FIX: Modified tranformation code to not use strnlen on mac as it's not available on that platform
FIX: Pretty printing of Vectors etc fixed
Fix: Exposed std::vector<bool> for joystick buttons in OIS
Fix: DataStream Ptr's were broken - fixed issues with non const shared pointers being exposed

Update: OgreMovableFactoryObect (specifically getType function) can now be sub classed
Update: Bullet modules created around Bullet 2.73 now working properly and wrappers improved
Update: ogre.LodDistanceList is now ogre.stdVectorFloat -- change in ET demo
Update: QuickGUI Demo updated - works and shows more functionality