@@ -1,8 +1,13 @@
 import sys, os 
+import warnings
+warnings.simplefilter('ignore', RuntimeWarning)
+
 # Note that we put the Python-Ogre path first to ensure we don't get strange problems with windows
 # picking up the wrong dlls -- Thanks to Pelle for tracking down this issue..
 if sys.platform == 'win32': 
     os.environ['PATH'] =  __path__[0] +';' + os.environ['PATH']
 
 from _ogreoctreesm_ import *
+
+warnings.resetwarnings( ) 
 
